--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,36 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>RedShepherd</groupId>
+    <groupId>com.redshepherd</groupId>
     <artifactId>RedPay</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.dev1</version>
+    <packaging>jar</packaging>
+
+    <name>RedPay</name>
+    <description>RedPay Payment Processing API</description>
+    <url>https://github.com/RedShepherdLLC/sdk-java</url>
+
+    <developers>
+        <developer>
+            <name>Red Shepherd</name>
+            <email>azuredev@redshepherd.com</email>
+            <organization>Red Shepherd</organization>
+            <organizationUrl>http://www.redshepherd.com</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/RedShepherdLLC/sdk-java.git</connection>
+        <developerConnection>scm:git:ssh://github.com:RedShepherdLLC/sdk-java.git</developerConnection>
+        <url>https://github.com/RedShepherdLLC/sdk-java</url>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp-ws -->
@@ -31,6 +58,7 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- For encryption -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
